<resources>
    <string name="app_name" translatable="false">PrácticaT4</string>
    <string name="titleNumeros">Números Primos</string>
    <string name="titleJuego">Juego De Aciertos</string>
    <string name="titleDesplazando">Desplazando Imágenes</string>
    <string name="titleSeleccionando">Seleccionando Imágenes</string>
    <string name="txtNumeroEntero">Introduce un número entero:</string>
    <string name="txtCalcular">Calcular</string>
    <string name="btnNumeros">Números</string>
    <string name="btnJuego">Juego</string>
    <string name="btnDesplazando">Desplazando</string>
    <string name="btnSeleccionando">Seleccionando</string>
    <string name="radbtnEspaña">España</string>
    <string name="radbtnFrancia">Francia</string>
    <string name="radbtnItalia">Italia</string>
    <string name="radbtnVenezuela">Venezuela</string>
    <string name="radbtnChina">China</string>
    <string name="radbtnJapon">Japón</string>
    <string name="radbtnMexico">Mexico</string>
    <string name="radbtnBrasil">Brasil</string>
    <string name="radbtnArgentina">Argentina</string>
    <string name="radbtnAlemania">Alemania</string>

    <string name="radbtnMadrid">Madrid</string>
    <string name="radbtnParis">París</string>
    <string name="radbtnRoma">Roma</string>
    <string name="radbtnCaracas">Caracas</string>
    <string name="radbtnPekin">Pekin</string>
    <string name="radbtnTokio">Tokio</string>
    <string name="radbtnCiudadMexico">Ciudad de Mexico</string>
    <string name="radbtnBrasilia">Brasilia</string>
    <string name="radbtnBuenosAires">Buenos Aires</string>
    <string name="radbtnBerlin">Berlín</string>
    <string name="resultadoPaises">País </string>
    <string name="resultadoCapitales">Capital </string>
    <string name="btnVerificar">Verificar</string>

    <string name="btnRosa">Rosa</string>
    <string name="btnClavel">Clavel</string>
    <string name="btnJazmin">Jazmin</string>
    <string name="btnTulipan">Tulipan</string>


</resources>
